src/objects/Moves_Mgmt_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Donor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donor (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Moves Management Team</relationshipLabel>
        <relationshipName>Moves_Mgmt_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donor_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donor (Org)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Moves Management Team</relationshipLabel>
        <relationshipName>Major_Donor_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Moves_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Moves Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Member_Notes__c</fullName>
        <label>Team Member Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <inlineHelpText>Staff or non-staff.  If the team member is on staff, you must create a Contact record for them if they don&apos;t already have one.</inlineHelpText>
        <label>Team Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>On Moves Management Team For</relationshipLabel>
        <relationshipName>Donors_On_Team_For</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Moves Management Team Member</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Team Mbr Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Moves Management Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_OR_Organization_Donor_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT(ISBLANK(Donor_Contact__c)),
  NOT(ISBLANK(Donor_Org__c))
)</errorConditionFormula>
        <errorDisplayField>Donor_Contact__c</errorDisplayField>
        <errorMessage>You may only select either a Contact or an Organization Donor for this Moves Management Team Member, but not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_or_Org_Must_Be_Filled_Out</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISBLANK(Donor_Contact__c),
  ISBLANK(Donor_Org__c)
)</errorConditionFormula>
        <errorDisplayField>Donor_Contact__c</errorDisplayField>
        <errorMessage>You must select either a Contact or Organization donor for this Moves Management Team Member.</errorMessage>
    </validationRules>
</CustomObject>